recursion.hanoi.lessons.recursion.hanoi.SplitHanoi1.scala.error
SplitHanoi1:28: error: not enough arguments for method splitHanoi: (height: Int, src: Int, other: Int, dst1: Int, dst2: Int)Unit.
Unspecified value parameter dst2.
      splitHanoi((n - 1), other, dst1, dst2)
                ^